src/main/resources/static/scss/components/_navbar.scss
.nav-pills .nav-link.active,
.nav-pills .show > .nav-link {
    background: white;
    color: #004252;
}

.nav-pills {
    .nav-link { /* Set icon styling for nav-bar icons. */
        color: $dark-teal;
        height: 44px;

        &.active {
            position: relative;
            background-color: white;
            color: $dark-teal;

            &::after {
                content: "";
                border-color: $dark-teal;
                border-style: solid;
                width: 0;
                height: 0;
                position: absolute;
            }
        }
    }
}

@include media-breakpoint(max-landscape-phone) {
    .nav-pills .nav-link.active::after {
        border-width: 0 10px 10px 10px;
        border-color: transparent transparent #fff transparent;
        bottom: -16px;
        left: 33%;
    }
}

@include media-breakpoint(min-tablet) {
    .nav-pills .nav-link.active::after {
        border-width: 10px 10px 10px 0;
        border-color: transparent #fff transparent transparent;
        top: 25%;
        right: -35px;
    }
}

@include media-breakpoint(min-desktop) {
    .nav-pills .nav-link.active::after {
        right: -18px;
    }
}

@include media-breakpoint(min-large-desktop) {
    .nav-pills .nav-link.active::after {
        right: -24px;
    }
}

.nav-pills .show > .nav-link {
    background: white;
    color: $dark-teal;
}

.nav-link {
    white-space: nowrap;
}

.nav-tabs {
    .nav-item {
        margin-top: 1rem;
    }

    .nav-link {
        border: none;
    }
}

.navbar {
    background-color: white;
    padding-top: 0;
    padding-bottom: 0;

    .navbar-nav {
        font-size: 1.2rem;
        .nav-link {
            color: $uh-dark-gray;

            &:hover,
            &:focus,
            &:active {
                color: $uh-teal;
            }
        }

        .nav-item {
            padding-left: 0.3125rem;
            padding-right: 0.3125rem;
        }
    }

    @include media-breakpoint(min-desktop) {
        .nav {
            padding: 2.5rem 1.25rem 0 0;
            background-color: white;
        }

        .navbar-brand {
            padding: 0;

            > img {
                background-color: transparent;
            }
        }
    }
}

.fixed-top .navbar-brand {
    padding: 0;
}

.nav.nav-tabs {
    border-bottom: none;
}

.tooltip {
    pointer-events: none;

    @include media-breakpoint(max-tablet) {
        .tooltip {
            display: none;
        }
    }
}

/* Centers side navbar */
#group-pills > .nav-item {
    width: 2.75rem;
    height: 2.75rem;

    > .nav-link { /* Centers elements in side navbar */
        padding-left: 0.75rem;
    }
}

.nav-item.mx-auto .nav-link.rounded-circle .side-nav {
    align-items: center;

    @include media-breakpoint(max-portrait-phone) {
        border: none;
        background-color: #e3f2ef;
        padding: 0 0 2px 0;
    }
}

